# EMS

./: .gitignore  __init__.py  constants.py  helpers.py  load_dataset.py  setup.cfg  store_segmentation.py
basket_analysis/: abc_analysis.py  apriori_basket_analysis.py  sales_by_weekday_and_hour_of_day.py
basket_clustering/: main.py  pipeline.py  visualization.py
product_sales/: STL_decomp.py  benchmarks.py  classical_decomp.py  exp_smoothing.py  linear_model.py
