[metadata]
name = EMS
version = 0.0.0
description = Emmerys Sales (EMS) package

[options]
packages = find:
py_modules = load_dataset, helpers, constants
include_package_data = True
python_requires = >=3.8
install_requires =
    pandas
    numpy
    scipy
    statsmodels
    seaborn
    matplotlib
    scikit-learn
    openpyxl
    pyarrow
